# MLcpp

./: README.md
data/: * ML_C++ | Trello.html
data/* ML_C++ | Trello_files/: app.js  auth.html  cbgapi.loaded_0  core.css  gtm.js  locale.js
docs/: Doxygen.in  Doxygen.in~
docs/html/: abalone_8h_source.html  annotated.html  architecture_8h_source.html  banknote_8h_source.html  classbpnet-members.html  classbpnet.html  classbpnet__CrossEntropy__softmax-members.html  classbpnet__CrossEntropy__softmax.html  classbpnet__MSE__sigmoid-members.html  classbpnet__MSE__sigmoid.html  classbpnet__mpi-members.html  classbpnet__mpi.html  classbpnet__mpi__MSE__sigmoid-members.html  classbpnet__mpi__MSE__sigmoid.html  classes.html  dataframe_8h_source.html  dir_02360bd02ac1201056da1daa384a18e9.html  dir_0b16f15044e535fa7c895c1c90d43998.html  dir_5f471eaf57012629acf16cd9047ccfa3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6b377731c436e3c72758d22c054ed575.html  dir_7b63dee1f79af32e1cd1f2d85579962b.html  dir_9b4349f207354ba3ed2d0ac86a61b5f1.html  dir_a4c1bc47733d52c12dcbe7406a6f5ba1.html  dir_b1c7e747d9135ee5d9f17d54a7fea923.html  dir_e931c1a3f0014e624d0645a271726ad2.html  examples_2pch_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  iris_8h_source.html  layer_8h_source.html  md__home_jiguangshen_HPC_MachineLearning_MLcpp_src_README.html  neural__network_2pch_8h_source.html  neural__network_8mpi_2pch_8h_source.html  neural__network_8unittest_2pch_8h_source.html  neuron_8h_source.html  (+28 more)
docs/latex/: annotated.tex  classbpnet.eps  classbpnet.tex  classbpnet__CrossEntropy__softmax.eps  classbpnet__CrossEntropy__softmax.tex  classbpnet__MSE__sigmoid.eps  classbpnet__MSE__sigmoid.tex  classbpnet__mpi.eps  (+43 more)
src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake  run.sh
src/Testing/Temporary/: CTestCostData.txt
src/data_handling/: csv_batch.h
src/examples/: CMakeLists.txt  CMakeLists.txt~  Makefile  abalone.cpp  abalone.cpp~  abalone.h  abalone.h~  banknote.cpp  banknote.cpp~  banknote.h  cmake_install.cmake  dataframe.h  dataframe.h~  iris.cpp  iris.cpp~  iris.h~  pch.h  pch.h~  yeast.cpp~  yeast.h~
src/neural_network/: CMakeLists.txt~  Makefile  architecture.h  cmake_install.cmake  layer.cpp  layer.cpp~  layer.h  layer.h~  neuron.cpp~  neuron.h  neuron.h~  nnet.cpp  nnet.cpp~  nnet.h  nnet.h~  pch.cpp  pch.h
src/neural_network.mpi/: CMakeLists.txt  Makefile  cmake_install.cmake  neuron.mpi.h~  nnet.mpi.h  nnet.mpi.h~  nnet_mpi.cpp  pch.h
src/neural_network.unittest/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  layer_test.cpp  main.cpp  neuron_test.cpp  nnet_test.cpp  nnet_test.cpp~  pch.h
src/neural_network/neural_network/: neural_network.cbp  neural_network.layout
src/python_wrapper/: CMakeLists.txt  Makefile  cmake_install.cmake  hello.py  hello.py~  hello_boost_python.cpp  hello_boost_python.cpp~
src/src/: CMakeLists.txt  clean-all.cmake~
src/src/neural_network/: CMakeLists.txt~  neuron.cpp  neuron.h  pch.h
src/src/neural_network.unittest/: CMakeLists.txt  cmake_install.cmake  nnet_test.cpp  pch.h
(+34 files in other folders)
